<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Add">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/title"
        android:textColor="@color/Heading"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/entrytitletxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundedborder"

        android:ems="10"
        android:hint="@string/entry_title"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/description"
        android:textColor="#2233ef"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrytitletxt" />

    <EditText
        android:id="@+id/entry_descriptiontxt"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"

        android:background="@drawable/roundedborder"
        android:ems="10"
        android:hint="@string/your_description_here"
        android:inputType="textMultiLine"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/saveb"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/entry_descriptiontxt"
        tools:layout_editor_absoluteX="0dp">

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_descriptiontxt">


            <RadioButton
                android:id="@+id/happyemoji"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:drawableEnd="@drawable/happyrb"
                android:drawableRight="@drawable/happyrb" />

            <RadioButton
                android:id="@+id/angryemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/angryrb"
                android:drawableRight="@drawable/angryrb" />

            <RadioButton
                android:id="@+id/cryingemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/cryingrb"
                android:drawableRight="@drawable/cryingrb" />

            <RadioButton
                android:id="@+id/inloveemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/inloverb"
                android:drawableRight="@drawable/inloverb" />

            <RadioButton
                android:id="@+id/surprisedemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/surprisedrb"
                android:drawableRight="@drawable/surprisedrb" />

            <RadioButton
                android:id="@+id/sademoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/sadrb"
                android:drawableRight="@drawable/sadrb" />

            <RadioButton
                android:id="@+id/embrassedemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/embarassedrb"
                android:drawableRight="@drawable/embarassedrb" />

            <RadioButton
                android:id="@+id/hilariousemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/hilariuosb"
                android:drawableRight="@drawable/hilariuosb" />

            <RadioButton
                android:id="@+id/coolemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/coolb"
                android:drawableRight="@drawable/coolb" />


            <RadioButton
                android:id="@+id/angrytwoemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/angrytwob"
                android:drawableRight="@drawable/angrytwob" />


            <RadioButton
                android:id="@+id/boredemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/boredb"
                android:drawableRight="@drawable/boredb" />


            <RadioButton
                android:id="@+id/confusedemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/confusedb"
                android:drawableRight="@drawable/confused" />

            <RadioButton
                android:id="@+id/crazyemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/crazyb"
                android:drawableRight="@drawable/crazyb" />

            <RadioButton
                android:id="@+id/favemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/favouriteb"
                android:drawableRight="@drawable/favouriteb" />


            <RadioButton
                android:id="@+id/glademoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/gladb"
                android:drawableRight="@drawable/gladb" />

            <RadioButton
                android:id="@+id/kissemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/kissb"
                android:drawableRight="@drawable/kissb" />


            <RadioButton
                android:id="@+id/omgemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/omgb"
                android:drawableRight="@drawable/omgb" />

            <RadioButton
                android:id="@+id/sickemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/sickb"
                android:drawableRight="@drawable/sickb" />

            <RadioButton
                android:id="@+id/thinkingemoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/thinikingb"
                android:drawableRight="@drawable/thinikingb" />


        </RadioGroup>
    </HorizontalScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cancelfbadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="3dp"

        android:layout_marginTop="3dp"
        android:clickable="true"
        android:focusable="true"
        app:elevation="10dp"
        app:fabCustomSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


</android.support.constraint.ConstraintLayout>